--- a/code/rob/django/lab_02/urlShortener/templates/urlShortener/index.html
+++ b/code/rob/django/lab_02/urlShortener/templates/urlShortener/index.html
@@ -31,9 +31,11 @@
                 </div>
                 <div id="center-urls">
                     <div id="urls">
+                            {% if latest_urls %}
                             <p>actual: {{ latest_urls.actual_url }}</p>
                             <p>short: <a href="{% url 'urlShortener:goTo' latest_urls.short_url%}">{{ latest_urls.short_url }}</a></p>
-                    </div>
+                            {% endif %}
+                        </div>
                 </div>
             </div>
         <div>
