--- a/code/mileidy/DJANGO/lab_03/posts/templates/posts/index.html
+++ b/code/mileidy/DJANGO/lab_03/posts/templates/posts/index.html
@@ -27,6 +27,27 @@
                     </li>
                 </ul>
             </div>   
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="http://localhost:8000/users/signup">Sign Up!</a>
+                    </li>
+                </ul>
+            </div>   
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="http://localhost:8000/users/login">Login</a>
+                    </li>
+                </ul>
+            </div>   
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="http://localhost:8000/users/logout">Logout</a>
+                    </li>
+                </ul>
+            </div>   
     </nav>
 
     {{message}}
