--- a/code/Jen/django/lab_02/url_shortener/shortening/templates/shortening/index.html
+++ b/code/Jen/django/lab_02/url_shortener/shortening/templates/shortening/index.html
@@ -20,13 +20,26 @@
 
         <form method="POST">
             {% csrf_token %}
-            https://<input type="text" name="the_url" autofocus>
+
+            <input type="text" name="the_url" autofocus>
+
             <input type="submit" value="Submit" autofocus>
         </form>
 
         <h3> Your shortened url is: </h3>
         <h4> {{ shorty }}</h4>
         </p>
+
+
+        <p>
+        <h2 class=heading> Or, enter your shortened URL to go to the associated page. <h2>
+
+                <form method="POST">
+                    {% csrf_token %}
+                    <input type="text" name="short_version">
+                    <input type="submit" value="Submit" autofocus>
+                </form>
+                </p>
 
 
 
