--- a/code/tony/js/lab05/css/site.css
+++ b/code/tony/js/lab05/css/site.css
@@ -1,9 +1,18 @@
+body {
+    background: #c2c2c2;
+}
 ul#tasks {
     list-style-type: none;
     padding: 0;
 }
-a {
+.icon {
+    font-size: 32px;
     text-decoration: none;
-    color: #900;
-    font-weight: bold;
+    color: white;
+}
+a:link.icon.delete, a:visited.icon.delete {
+    color: #f00;
+}
+a:hover.icon.delete {
+    color: #00f;
 }
