--- a/code/teyon/django/lab03/templates/home.html
+++ b/code/teyon/django/lab03/templates/home.html
@@ -11,6 +11,7 @@
 {% else %}
   <p>You are not logged in</p>
   <a href="{% url 'login' %}">Log In</a>
+  <a href="{% url 'signup' %}">Signup</a>
 {% endif %}
 {% endblock %}
 
