--- a/code/vel/Django/lab03/templates/home.html
+++ b/code/vel/Django/lab03/templates/home.html
@@ -11,5 +11,6 @@
 {% else %}
   <p>You are not logged in</p>
   <a href="{% url 'login' %}">Log In</a>
+  <a href="{% url 'signup' %}">Sign up</a>
 {% endif %}
 {% endblock %}
