--- a/code/jordyn/django/lab03/chirp/templates/home.html
+++ b/code/jordyn/django/lab03/chirp/templates/home.html
@@ -11,5 +11,7 @@
 {% else %}
   <p>You are not logged in</p>
   <a href="{% url 'login' %}">Log In</a>
+  <br>
+  <a href="{% url 'signup' %}">Signup</a>
 {% endif %}
 {% endblock %}
