--- a/code/jordyn/javascript/capstone/main.css
+++ b/code/jordyn/javascript/capstone/main.css
@@ -2,30 +2,91 @@ body {
     margin: 0px;
     padding: 0px;
 
-    background-color: pink;
+    background-image: url("https://wallpaperaccess.com/full/435988.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+#app {
+    display: grid;
+    min-height: 100vh;
+    
+    grid-template-areas: 
+    "head head"
+    "side-bar content";
+    grid-template-rows: 100px 1fr ;
+    grid-template-columns: 250px 1fr;
 }
 
 header {
+    display: flex;
+    grid-area: head;
+    justify-content: center;
+    align-items: center;
     width: 1;
-    height: 100px;
 
-    background-color: rgb(36, 36, 36);
 }
 
 .side-bar {
     display: flex;
-    width: 180px;
-    height: calc(100vh - 100px);
-
-    background-color: rgb(36, 36, 36);
+    grid-area: side-bar;
+    flex-direction: column;
+    align-items: center;
+    
+    color: rgb(255, 255, 255);
 }
 
 .content {
-    position: absolute;
-    top: 100px;
-    left: 180px;
-
     display: flex;
-    height: calc(100vh - 100px);
-    width: calc(100vw - 180px);
+    grid-area: content;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    flex-direction: row;
+    align-content: flex-start;
+
+    width: auto;
+    padding-top: 2%;
+
+    background-color: rgb(58, 58, 58);
+
+    border-radius: 20px 0 0 0;
+
+    padding-bottom: 200px;
+}
+
+.card {
+    margin: .5rem;
+    width: 500px;
+    height: 500px;
+}
+
+.card-body {
+    white-space: wrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-wrap: break-word
+}
+
+#cImage {
+    height: 200px;
+    object-fit: cover;
+}
+
+a {
+    padding: 3px;
+    background-color: black;
+    opacity: 70%;
+}
+
+li {
+    list-style-type: none;
+    padding-top: 20px;
+}
+
+.card:hover {
+    transition-delay: .3s;
+    height: 700px;
+    margin-bottom: calc(.5rem - 200px);
+    z-index: 1;
 }
