--- a/code/patrick/capstone/capstone/cookingwithfriends/cookbook/templates/cookbook/recipe_detail.html
+++ b/code/patrick/capstone/capstone/cookingwithfriends/cookbook/templates/cookbook/recipe_detail.html
@@ -7,6 +7,13 @@
         <div class="article-metadata">
             <a class="mr-2" href="#">{{ object.ruser }}</a>
             <small class="text-muted">{{ object.date_posted }}</small>
+            {% if ojbect.ruser == ruser %}
+                <div>
+                    <a class="btn btn-secondary btn-sm mt-1 mb-1"  href="{% url 'recipe-update' object.id %}">Update</a>
+                    <a class="btn btn-outline-danger btn-sm mt-1 mb-1"  href="{% url 'recipe-delete' object.id %}">Delete</a>
+                </div>
+                {% endif %}
+
         </div>
         <h2 class="article-title"> {{ object.recipetitle }}</h2>
         <p class="article-content">{{ object.ingredients }}</p>
