--- a/code/patrick/capstone/capstone/cookingwithfriends/cookbook/templates/cookbook/about.html
+++ b/code/patrick/capstone/capstone/cookingwithfriends/cookbook/templates/cookbook/about.html
@@ -1,5 +1,5 @@
 {% extends "cookbook/base.html" %}
 {%block content  %}
-    <h1>Chatter About Page!</h1>
+    <h1>Cooking with Friends About Page</h1>
 {% endblock content %}
 
