--- a/code/patrick/capstone/capstone/cookingwithfriends/cookbook/templates/cookbook/base.html
+++ b/code/patrick/capstone/capstone/cookingwithfriends/cookbook/templates/cookbook/base.html
@@ -20,7 +20,7 @@
     <header class="site-header">
         <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
           <div class="container">
-            <a class="navbar-brand mr-4" href="{% url 'cookbook-home' %}">Chatter Home</a>
+            <a class="navbar-brand mr-4" href="{% url 'cookbook-home' %}"> COOKING WITH FRIENDS </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -35,25 +35,25 @@
                   <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
                   <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
                   <a class="nav-item nav-link" href="{% url 'recipe-create' %}">CreatePost</a>
+                 
                   
-
-                {% else %}
+                  {% else %}
                   <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
                   <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
-                {% endif %}
+                  {% endif %}
+                </div>
               </div>
             </div>
-          </div>
-        </nav>
-      </header>
-      <main role="main" class="container">
-        <div class="row">
+          </nav>
+        </header>
+        <main role="main" class="container">
+          <div class="row">
           <div class="col-md-8">
             {% if messages %}
-              {% for message in messages %}
-                <div class="alert alert-{{message.tags}}">
-                  {{ message }}
-
+            {% for message in messages %}
+            <div class="alert alert-{{message.tags}}">
+              {{ message }}
+              
                 </div>
               {% endfor %}
             {% endif %}
@@ -61,20 +61,25 @@
           </div>
           <div class="col-md-4">
             <div class="content-section">
-              <h3>Our Sidebar</h3>
-              <p class='text-muted'>You can put any information here you'd like.
+              <h3>Cooking with Friends</h3>
+              <p class='text-muted'>Edit your profile, Create a new recipe, or Logout .
                 <ul class="list-group">
-                  <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
+                  <a class="nav-item nav-link" href="{% url 'profile' %}">My Profile</a>
                   <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
                   <a class="nav-item nav-link" href="{% url 'recipe-create' %}">CreateRecipe</a>
+                  <form method="POST" action="{% url 'search-cookbook' %}" class="searchdisplay" >
+                    {% csrf_token %}
+                    <input  type="text" name="searched" placeholder="enter a search term"  > 
+                    
+                  </form>
+                  
                 </ul>
               </p>
             </div>
           </div>
         </div>
       </main>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
