--- a/code/patrick/capstone/capstone/cookingwithfriends/cookbook/templates/cookbook/home.html
+++ b/code/patrick/capstone/capstone/cookingwithfriends/cookbook/templates/cookbook/home.html
@@ -11,7 +11,10 @@
             <h2><a class="article-title" href="{% url 'recipe-detail' recipe.id %}">{{ recipe.recipetitle }}</a></h2>
             <p class="article-content">{{ recipe.ingredients }} </p>
             <p class="article-content"> {{recipe.recipelines}}</p>
-            </div>
+            <img src="media/upload" alt="picture" width="100" height="100"> {{recipe.picture}}
+            {% if recipe.picture == True %}
+            {% endif %}    
+        </div>
         </article>
     {% endfor %}
 {% endblock content %}
