--- a/code/rob/capstone/capstone/smite/templates/smite/index.html
+++ b/code/rob/capstone/capstone/smite/templates/smite/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Smite index template</p>
+    <p>Smite index test session</p>
     <h1>{{dev}}</h1>
     <h1>{{auth}}</h1>
     <h2>{{hashed}}</h2>
