fix the conversion from int to muscle group in load_exercises

--- a/code/vel/capstone/users/templates/registration/login.html
+++ b/code/vel/capstone/users/templates/registration/login.html
@@ -12,6 +12,7 @@
             {% csrf_token %}
             {{form.as_p}}
             <button type="submit">Submit</button>
+            <a href="{% url 'users:signup'%}">Sign up here!</a>
         </form>
     </div>
 </body>
