login working. access token validator is working. models created

--- a/code/cesar/capstone/runlogr/templates/home.html
+++ b/code/cesar/capstone/runlogr/templates/home.html
@@ -1,11 +1,13 @@
 <!-- templates/home.html -->
 {% extends 'base.html' %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Authentication{% endblock %}
 
 {% block content %}
 {% if user.is_authenticated %}
   Hi {{ user.username }}!
+
+  <p>Please authorize your Strava here: <a href="http://www.strava.com/oauth/authorize?client_id=95093&response_type=code&redirect_uri=http://localhost:8000/&approval_prompt=force&scope=read_all,profile:read_all,activity:read_all">click</a>
 {% else %}
   <p>You are not logged in</p>
   <a href="{% url 'login' %}">Log In</a>
