--- a/code/cesar/capstone/runlogr/templates/index.html
+++ b/code/cesar/capstone/runlogr/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <a href=""
+    <a href="http://www.strava.com/oauth/authorize?client_id=95093&response_type=code&redirect_uri=http://localhost:8000/&approval_prompt=force&scope=read_all,profile:read_all,activity:read_all">Authorize Here</a>
     
 </body>
-</html>
+</html>/search
