--- a/code/vel/capstone/templates/index.html
+++ b/code/vel/capstone/templates/index.html
@@ -1,32 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Workouts</title>
-</head>
-<body>
-    <p>This is the for the users / home page</p>
+{% extends 'base.html' %}
+
+{% load static %}
+{% block content %}
     
-    <form action="{% url 'exercise:results'%}" method="POST">
+<p>This is the for the users / home page</p>
+
+    <form action="" method="POST">
+
         {% csrf_token %}
         <select name="user_exercise_search" id="dropdown">
-            <option value="10">Abs</option>
-            <option value="8">Arms</option>
-            <option value="12">Back</option>
-            <option value="14">Calves</option>
+            <option value="Abs">Abs</option>
+            <option value="Arms">Arms</option>
+            <option value="Back">Back</option>
+            <option value="Calves">Calves</option>
             <option value="" disabled></option>
-            <option value="15">Cardio</option>
-            <option value="11">Chest</option>
-            <option value="9">Legs</option>
-            <option value="13">Shoulders</option>
+            <option value="Cardio">Cardio</option>
+            <option value="Chest">Chest</option>
+            <option value="Legs">Legs</option>
+            <option value="Shoulders">Shoulders</option>
         </select>
         <input type="submit" value="search">
     </form>
 
-    <a href="{% url 'exercise:results'%}">Exercise results</a>
-</body>
-</html>
+
+
+{% for exercise in object_list %}
+    <p>{{exercise.name}}</p>
+{% endfor %}
+{% endblock content %}
 
 
