--- a/code/cesar/capstone/runlogr/templates/base.html
+++ b/code/cesar/capstone/runlogr/templates/base.html
@@ -3,12 +3,46 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>{% block title %}Django Auth Tutorial{% endblock %}</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <title>{% block title %}logrunner | cesar rebolledo{% endblock %}</title>
 </head>
 <body>
   <main>
+    <div class="m-4">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <div class="container-fluid">
+              <a href="#" class="navbar-brand">logrunner</a>
+              <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+                  <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarCollapse">
+                  <div class="navbar-nav">
+                      {% comment %} <a href="" class="nav-item nav-link">Home</a> {% endcomment %}
+                  </div>
+                  <div class="navbar-nav ms-auto">
+                      <a href="{% url 'login' %}" class="nav-item nav-link">Login</a>
+                      <a href="{% url 'signup' %}" class="nav-item nav-link">Sign Up</a>
+                  </div>
+              </div>
+          </div>
+      </nav>
+  </div>
+      </nav>
+    <div>
+      
+    </div>
     {% block content %}
     {% endblock %}
   </main>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+  integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+  crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+  integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+  crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+  integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+  crossorigin="anonymous"></script>
 </body>
 </html>
