--- a/code/vel/capstone/templates/users/add-form.html
+++ b/code/vel/capstone/templates/users/add-form.html
@@ -3,9 +3,11 @@
 {% load static %}
 {% block content %}
 
-<form action="">
+<form action="{% url 'planner:save_workout' %}" method="POST">
     {% csrf_token %}
+    {{workout}} <br> {{description}}
     {{form}}
+    <button type="submit">Click me</button>
 </form>
 
 
