--- a/code/vel/capstone/static/css/main.css
+++ b/code/vel/capstone/static/css/main.css
@@ -1,3 +1,18 @@
-body {
-    background-color: red
+.input{
+    display: block;
 }
+
+label{
+    display: block;
+}
+
+form{
+    margin: 1em;
+    justify-content: center;
+}
+
+/* .content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+} */
