--- a/code/vel/capstone/templates/index.html
+++ b/code/vel/capstone/templates/index.html
@@ -2,44 +2,51 @@
 
 {% load static %}
 {% block content %}
-    
-<p>This is the for the users / home page</p>
 
-    <form action="" method="POST">
+<div class="content text-center p-3">
+    <p>Search for exercises by muscle group</p>
 
-        {% csrf_token %}
-        <select name="user_exercise_search" id="dropdown">
-            <option value="">---</option>
-            <option value="Abs">Abs</option>
-            <option value="Arms">Arms</option>
-            <option value="Back">Back</option>
-            <option value="Calves">Calves</option>
-            <option value="" disabled></option>
-            <option value="Chest">Chest</option>
-            <option value="Legs">Legs</option>
-            <option value="Shoulders">Shoulders</option>
-        </select>
-        <input type="submit" value="search">
-    </form>
 
-{% if exercises %}
-{% for exercise in exercises %}
-    <form action="{% url 'planner:add_to_workout' name=exercise.name desc=exercise.description %}">
-        {% csrf_token %}
-        <p>{{exercise.name}}:<br> {{exercise.description}}</p>
-        {% if user.is_authenticated %}
+    <!-- <div class="row justify-content-center"> -->
+
+        <form action="" method="POST">
             
-        <button type="submit">+</button>
-        {% endif %}
-    </form>
-{% endfor %}   
-{% endif %}
+            {% csrf_token %}
+            <select class="form-control w-25 mx-auto" name="user_exercise_search" id="dropdown">
+                <option value="">---</option>
+                <option value="Abs">Abs</option>
+                <option value="Arms">Arms</option>
+                <option value="Back">Back</option>
+                <option value="Calves">Calves</option>
+                <option value="" disabled></option>
+                <option value="Chest">Chest</option>
+                <option value="Legs">Legs</option>
+                <option value="Shoulders">Shoulders</option>
+            </select> <br>
+            <button class="btn btn-primary mt-3" type="submit" value="search">Search</button>
+        </form>
+    <!-- </div> -->
 
-{% for workout in this_workout %}
+    {% if exercises %}
+    <div class="row justify-content-center">
+        <div class="col-4">
+            {% for exercise in exercises %}
+            <form action="{% url 'planner:add_to_workout' name=exercise.name %}">
+                {% csrf_token %}
+                <p class="fw-bold text-decoration-underline">{{exercise.name}}</p> 
+                <p>{{exercise.description}}</p>
+                {% if user.is_authenticated %}
+                <button class='btn btn-primary' type="submit">+</button>
+                {% endif %}
+            </form>
+            {% endfor %}
+        </div>
+    </div>
+    {% endif %}
+
+    {% for workout in this_workout %}
     <p>{{workout}}</p>
-{% endfor %}
+    {% endfor %}
 
-{% endblock content %}
-
-
-
+    {% endblock content %}
+</div>
