--- a/code/vel/capstone/templates/partials/navbar.html
+++ b/code/vel/capstone/templates/partials/navbar.html
@@ -1,11 +1,29 @@
 <div class="nav">
-    <ul>
-        {% if request.user.is_authenticated %}
+    <div class="container">
+        <header
+            class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+            <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+                <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
+                    <use xlink:href="#bootstrap"></use>
+                </svg>
+            </a>
 
-        <li><a href="{% url 'logout' %}">Logout</a></li>              
-        {% else %}    
-        <li><a href="{% url 'login' %}">Login</a></li>
-        <li><a href="{% url 'users:signup' %}">Sign up!</a></li>
-        {% endif %}
-    </ul>
+            <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+                <li><a href="{% url 'exercise:index' %}" class="nav-link px-2 link-secondary">Home</a></li>
+                <li><a href="{% url 'planner:profile' %}" class="nav-link px-2 link-dark">Profile</a></li>
+                <!-- <li><a href="#" class="nav-link px-2 link-dark">Pricing</a></li>
+                <li><a href="#" class="nav-link px-2 link-dark">FAQs</a></li>
+                <li><a href="#" class="nav-link px-2 link-dark">About</a></li> -->
+            </ul>
+
+            <div class="col-md-3 text-end">
+                {% if request.user.is_authenticated %}
+                <a href="{% url 'logout' %}" class="text-decoration-none"><button type="button" class="btn btn-outline-primary me-2">Logout</button></a>
+                {% else %}
+                <button type="button" class="btn btn-outline-primary me-2"><a href="{% url 'login' %}">Login</a></button>
+                <button type="button" class="btn btn-primary"><a href="{% url 'users:signup' %}">Sign up!</a></button>
+                {% endif %}
+            </div>
+        </header>
+    </div>
 </div>
