--- a/code/faith/Capstone/DirtyWordy/accounts/templates/registration/signup.html
+++ b/code/faith/Capstone/DirtyWordy/accounts/templates/registration/signup.html
@@ -1,10 +1,31 @@
-{% extends 'registration/base.html' %}
+{% extends 'base.html' %}
+{% load static %}
 {% block title %}Sign Up{% endblock %}
 {% block content %}
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="{% static 'css/signup.css'%}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+</head>
+<body>
+    
     <h2>Sign Up</h2>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit"> Sign Up</button>
+        <button id='button'type="submit">Get Started</button>
     </form>
+</body>
+</html>
+<footer id="footer">
+    @Copyright DirtyWordy Author: Faith Cicero
+</footer>
 {% endblock %}
