--- a/code/faith/Capstone/DirtyWordy/dirtywordy_app/templates/base.html
+++ b/code/faith/Capstone/DirtyWordy/dirtywordy_app/templates/base.html
@@ -1,7 +1,9 @@
+{% load static %}
 <html>
 <head>
   <meta charset="utf-8">
   <title>{% block title %}Django Auth Tutorial{% endblock %}</title>
+ 
 </head>
 <body>
   <main>
@@ -9,4 +11,5 @@
     {% endblock %}
   </main>
 </body>
+
 </html>
