--- a/code/cesar/capstone/runlogr/templates/runs.html
+++ b/code/cesar/capstone/runlogr/templates/runs.html
@@ -1,22 +1,31 @@
 {% extends 'base.html' %}
 {% block title %}Runs{% endblock %}
 {% block content %}
+
 {% if user.is_authenticated %}
-  Hi {{ user.username }}!<br><br>
+  Welcome {{ user.username }}!<br><br>
+  
   
   <p><a href="{% url 'logout' %}">Log Out</a></p>
 
+
   {% for run in run_list %}
+  <div class="container d-flex flex-wrap align-items-center">
   <div class="card text-white bg-dark mb-3" style="max-width: 18rem;">
     <div class="card-header">{{ run.type }}</div>
     <div class="card-body">
       <h5 class="card-title">{{ run.name }}</h5>
-      <p class="card-text">Distance: {{ run.distance }}</p>
+      <p class="card-text" id="distance">Distance: {{ run.distance }} meters</p>
       <p class="card-text">Date & Time: {{ run.start_date }}</p>
-      <p class="card-text">Kudos: {{ run.kudos_count }}
+      <p class="card-text">Kudos: {{ run.kudos_count }}<br>
     </div>
+  </div> 
   </div>
 {% endfor %}  
+
+
+
+
     
 {% else %}
   <p>You are not logged in</p>
@@ -24,5 +33,10 @@
   <a href="{% url 'signup' %}">Sign Up</a>
 {% endif %}
 
+
+
+
 {% endblock %}
+
+
 
