--- a/code/cesar/capstone/runlogr/templates/base.html
+++ b/code/cesar/capstone/runlogr/templates/base.html
@@ -23,6 +23,7 @@
                   <div class="navbar-nav ms-auto">
                       <a href="{% url 'login' %}" class="nav-item nav-link">Login</a>
                       <a href="{% url 'signup' %}" class="nav-item nav-link">Sign Up</a>
+                     
                   </div>
               </div>
           </div>
@@ -33,6 +34,7 @@
       
     </div>
     {% block content %}
+    
     {% endblock %}
   </main>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -44,5 +46,9 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
   integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
   crossorigin="anonymous"></script>
+<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+
+
+
 </body>
 </html>
